--- a/bootstrap/startbootstrap-business-casual-4-dev/index.html
+++ b/bootstrap/startbootstrap-business-casual-4-dev/index.html
@@ -42,7 +42,7 @@
 
 </head>
 
-<body>
+<!-- <body>
 
     <div class="tagline-upper text-center text-heading text-shadow text-white mt-4 hidden-md-down">Business Casual</div>
     <div class="tagline-lower text-center text-expanded text-shadow text-uppercase text-white mb-4 hidden-md-down">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
@@ -157,4 +157,8 @@
 
 </body>
 
+ -->
+ <body>
+     
+ </body>
 </html>
